--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                 <article class="tarjeta p-5">
                   <div class="tarjeta__header mb-3">Información del programa</div>
                   <div class="tarjeta__body mb-4">
-                    <span class="d-block mb-2">Complementario/Técnico/Tecnólogo</span>
-                    <h1>Nombre del programa que puede ser extremadamente largo y extenso</h1>
+                    <span class="d-block mb-2">Complementario</span>
+                    <h1>Uso de la Imagen y la Fotografía para Producciones Gráficas</h1>
                   </div>
                   <div class="tarjeta__action">
                     <button class="boton video-btn" type="button" data-bs-toggle="modal"
-                      data-src="https://www.youtube.com/embed/Jfrjeg26Cwk" data-bs-target="#myModal">
+                      data-src="https://www.youtube.com/embed/TTwr-PfhyJU?si=McQNci0ofMZKxNNA" data-bs-target="#myModal">
                       <span>Reproducir video</span>
                       <img src="./assets/ico-flecha.svg" />
                     </button>
@@ -68,7 +68,7 @@
                       style="width: 50px" />
                   </div>
                   <div class="contenido__footer__item__text">
-                    <h4 class="mb-1">Código</h4><span>00000000</span>
+                    <h4 class="mb-1">Código</h4><span>52410394</span>
                   </div>
                 </div>
               </div>
@@ -78,10 +78,11 @@
                       style="width: 42px" />
                   </div>
                   <div class="contenido__footer__item__text">
-                    <h4 class="mb-1">Horas</h4><span>2208</span>
+                    <h4 class="mb-1">Horas</h4><span>40</span>
                   </div>
                 </div>
               </div>
+              <!--
               <div class="col-lg-auto p-0">
                 <div class="contenido__footer__item py-4">
                   <div class="contenido__footer__item__img me-3"><img src="./assets/ico-duracion.svg"
@@ -91,6 +92,7 @@
                   </div>
                 </div>
               </div>
+              -->
               <div class="col-lg-auto p-0">
                 <div class="contenido__footer__item py-4">
                   <div class="contenido__footer__item__img me-3"><img src="./assets/ico-modalidad.svg"
@@ -113,7 +115,7 @@
             </div>
           </div>
           <div class="col-lg-auto tarjeta naranja p-0 d-flex justify-content-center">
-            <a href="descargas/ejemplo.pdf" target="_blank" class="boton-footer py-4 px-5 button-jittery">
+            <a href="descargas/Informacion_programa_52410394.pdf" target="_blank" class="boton-footer py-4 px-5 button-jittery">
               <div class="contenido__footer__item">
                 <div class="contenido__footer__item__img me-3"><img src="./assets/ico-descarga.svg"
                     style="width: 62px" />
@@ -251,7 +253,7 @@
 
     .boton {
       background-color: white;
-      border: 3px solid #f36d21;
+      border: 3px solid #39A900;
       display: flex;
       padding: 10px;
       border-radius: 30px;
@@ -268,11 +270,11 @@
     }
 
     .boton:hover {
-      background-color: #fcc4a7;
+      background-color: #d9ffd9;
     }
 
     .naranja {
-      background-color: #f36d21 !important;
+      background-color: #39A900; !important;
     }
 
     a {
