--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <div class="tarjeta__header mb-3">Información del programa</div>
                   <div class="tarjeta__body mb-4">
                     <span class="d-block mb-2">Complementario</span>
-                    <h1>Uso de la Imagen y la Fotografía para Producciones Gráficas</h1>
+                    <h1>USO DE LA IMAGEN Y LA FOTOGRAFÍA PARA DRODUCCIONES GRÁFICAS</h1>
                   </div>
                   <div class="tarjeta__action">
                     <button class="boton video-btn" type="button" data-bs-toggle="modal"
